Use OpenAPI for API Interface generation
